# autosar-data

./: .rustfmt.toml  Cargo.toml  Changelog.md  README.md
.github/workflows/: coverage.yml  test.yml
autosar-data/: Cargo.toml  README.md
autosar-data-abstraction/: Cargo.toml  README.md
autosar-data-abstraction/src/: arpackage.rs  can.rs  ecuinstance.rs  ethernet.rs  flexray.rs  lib.rs  system.rs
autosar-data-abstraction/src/communication/: datatransformation.rs  mod.rs  networkendpoint.rs  socketaddress.rs
autosar-data-abstraction/src/communication/cluster/: can.rs  ethernet.rs  flexray.rs  mod.rs
autosar-data-abstraction/src/communication/controller/: can.rs  ethernet.rs  flexray.rs  mod.rs
autosar-data-abstraction/src/communication/frame/: can.rs  flexray.rs  mod.rs
autosar-data-abstraction/src/communication/pdu/: isignal_idpu.rs  mod.rs
autosar-data-abstraction/src/communication/physical_channel/: can.rs  ethernet.rs  flexray.rs  mod.rs
autosar-data-abstraction/src/communication/physical_channel/ethernet/: mod.rs  networkendpoint.rs  soad_old.rs  socketaddress.rs  someip.rs  someip_old.rs
autosar-data-abstraction/src/communication/signal/: mod.rs
autosar-data-abstraction/src/communication/transport_layer/: can_tp.rs  doip_tp.rs  flexray_ar_tp.rs  flexray_tp.rs  mod.rs
autosar-data-abstraction/src/datatype/: applicationtype.rs  basetype.rs  compu_method.rs  implementationtype.rs  mapping.rs  mod.rs
autosar-data-abstraction/src/software_component/: connector.rs  mod.rs  port.rs
autosar-data-abstraction/src/software_component/interface/: clientserver.rs  mod.rs  senderreceiver.rs
autosar-data-abstraction/src/system/: mapping.rs  mod.rs
autosar-data-abstraction/tests/: test.rs  test_can.rs  test_ethernet_v1.rs  test_ethernet_v2.rs  test_flexray.rs
autosar-data-specification/: Cargo.toml  README.md
autosar-data-specification/src/: attributename.rs  autosarversion.rs  elementname.rs  enumitem.rs  lib.rs  regex.rs  specification.rs
autosar-data/benches/: create_elements.rs
autosar-data/examples/businfo/: main.rs
autosar-data/examples/demo/: main.rs
autosar-data/examples/generate_files/: main.rs
autosar-data/examples/sort/: main.rs
autosar-data/src/: arxmlfile.rs  autosardata.rs  autosarmodel.rs  autosarproject.rs  chardata.rs  element.rs  elementraw.rs  iterators.rs  lexer.rs  lib.rs  parser.rs
examples/demo/: main.rs
src/: arxmlfile.rs  autosardata.rs  chardata.rs  element.rs  iterators.rs  lexer.rs  lib.rs  parser.rs  spec_support.rs
