[package]
name = "autosar-data-abstraction"
version = "0.0.1"
authors = ["Daniel Thaler <daniel@dthaler.de>"]
edition = "2021"
description = "abstraction layer for the autosar-data model"
license = "MIT OR Apache-2.0"
keywords = ["arxml", "automotive", "file-format", "Autosar"]
# categories = ["parser-implementations"]
repository = "https://github.com/DanielT/autosar-data"

[dependencies]
autosar-data = "0.14"
autosar-data-specification = "0.14"
thiserror = "~1.0"

[dev-dependencies]
tempfile = "3.8"
