[package]
name = "autosar-data-specification"
version = "0.6.0"
authors = ["Daniel Thaler <daniel@dthaler.de>"]
edition = "2021"
description = "specification of the Autosar arxml file format as rust data structures"
license = "MIT OR Apache-2.0"
keywords = ["arxml", "automotive", "file-format", "Autosar"]
categories = ["parser-implementations"]
repository = "https://github.com/DanielT/autosar-data"
