[package]
name = "autosar-data"
version = "0.11.0"
authors = ["Daniel Thaler <daniel@dthaler.de>"]
edition = "2021"
description = "read, write and modify Autosar arxml data"
license = "MIT OR Apache-2.0"
keywords = ["arxml", "automotive", "file-format", "Autosar"]
categories = ["parser-implementations"]
repository = "https://github.com/DanielT/autosar-data"

[dependencies]
autosar-data-specification = "0.11"
thiserror = "~1.0"
smallvec = { version = "~1.11.0", features = ["union", "const_generics"]}
parking_lot = "0.12"
rustc-hash = "1.1.0"

[dev-dependencies]
tempfile = "3.8"

[[example]]
name = "demo"
