[package]
name = "autosar-data"
version = "0.20.0"
authors = ["Daniel Thaler <daniel@dthaler.de>"]
edition = "2024"
description = "read, write and modify Autosar arxml data"
license = "MIT OR Apache-2.0"
keywords = ["arxml", "automotive", "file-format", "Autosar"]
categories = ["parser-implementations"]
repository = "https://github.com/DanielT/autosar-data"

[dependencies]
autosar-data-specification = "0.20"
thiserror = "2.0"
smallvec = { version = "1.14.0", features = ["union", "const_generics"]}
parking_lot = "0.12"
indexmap = "2.2.0"
fxhash = "0.2.1"
num-traits = "0.2.18"

[dev-dependencies]
tempfile = "3.19"
criterion = { version = "0.5", features = ["html_reports"]}

[[example]]
name = "demo"

[[bench]]
name = "create_elements"
harness = false
